# ImageAnnotation

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  imageAnnotation.sln
BufferUnitTest/: BufferUnitTest.cpp  BufferUnitTest.vcxproj  BufferUnitTest.vcxproj.filters
ClientApp/: ClientApp.vcxproj  ClientApp.vcxproj.filters  GRAPHICSTRUCT.cpp  GRAPHICSTRUCT.h  NCComponents.h  Overlays.h  Parameters.cpp  Parameters.h  Widgets.h  WinMain.cpp  WinMain.h
ClientApp/NCComponents/: MaxButton.h  MinButton.cpp  MinButton.h  NCButton.cpp  NCButton.h  RestoreDownButton.cpp
ClientApp/Network/: ServerInterface.cpp  sspiUtil.h
ClientApp/Overlays/: BaseOverlay.cpp  BaseOverlay.h  CmpOverlay.cpp  CmpOverlay.h  DropDownOverlay.cpp  DropDownOverlay.h  FileMenu.cpp  FileMenu.h  (+7 more)
ClientTest/: ClientTest.vcxproj  main.cpp
CllientApp/: ClientApp.vcxproj  GRAPHICSTRUCT.h
Server/: CMakeLists.txt  Server.vcxproj  Server.vcxproj.filters  main.cpp
Server/include/: EventLoop.h  util.h
Server/include/Events/: Event.h
Server/src/: main.cpp
Server/util/: CMakeLists.txt  Tree.h
WinClientDASAPI/: DASAPI.cpp  DASAPI.h  WinClientDASAPI.vcxproj  WinClientDASAPI.vcxproj.filters  pch.h
imageAnnotation/: Container.cpp  Container.h  GRAPHICSTRUCT.cpp  Layout.cpp  Layout.h  NCButton.cpp  NCButton.h  NCTextButton.cpp  Network.h  Overlays.h  Panel.cpp  Panel.h  Parameters.cpp  Parameters.h  Resizable.cpp  Resizable.h  ResizeBehaviour.cpp  ResizeBehaviour.h  Widget.cpp  Widget.h  WinMain.cpp  WinMain.h  basewin.h  imageAnnotation.vcxproj  imageAnnotation.vcxproj.filters
(+139 files in other folders)
